# patchwright

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  phase0-spike-plan.md  phase1-work-plan.md  pyproject.toml  ruff.toml
.claude/agents/: commit-ready.md  delta-reviewer.md  echo-pentester.md  india-cicd-engineer.md  india-infra-engineer.md  juliett-engineer.md  qa-engineer.md  qa-team-lead.md  security-review-delta-lead.md  security-review-echo-lead.md  team-india-lead.md  team-juliett-lead.md
.claude/docs/: CRAWLER_BLOCKING_POLICY.md  MANDATORY_STANDARDS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dco.yml  release.yml
.well-known/: security.txt
docs/: plugins.md
src/patchwright/adapters/: __init__.py  intake_ghsa.py  intake_json.py  repo_github.py
src/patchwright/agents/: cross_checker.py  noop_closer.py  noop_triage.py  patch_apply.py  patch_plan.py  reproduce.py  triage.py
src/patchwright/cli/: __main__.py  explain.py  hello.py  init.py  journal.py  list.py  review.py  serve.py
src/patchwright/core/: __init__.py  artifacts.py  cases.py  config.py  errors.py  evidence.py  fsm.py  hashing.py  intake.py  journal.py  journal_crypto.py  llm.py  models.py  orchestrator.py  plugins.py  protocols.py  registry.py  repo.py  repo_effects.py  reviews.py  sandbox.py  secrets.py
src/patchwright/fixtures/: hello_report.json
src/patchwright/mcp_server/: server.py  tools.py
src/patchwright/models/: __init__.py  cross_check.py  patch_apply_result.py  patch_plan.py  poc.py  repro.py  triage.py
src/patchwright/providers/: __init__.py  anthropic_provider.py  factory.py  mcp_sampling.py  openai_compat.py
src/patchwright/sandboxes/: __init__.py  docker.py  gvisor.py
src/patchwright/tools/: __init__.py  codemod_python.py  repo_context.py  test_gen_python.py
tests/: repro_fixtures.py  test_anthropic_provider.py  test_cases.py  test_cli_init.py  test_cli_review.py  test_codemod_fixtures.py  test_codemod_ops.py  test_config.py  test_cross_checker_agent.py  test_cross_checker_integration.py  test_docker_sandbox.py  test_docker_sandbox_integration.py  test_embargo_journal_e2e.py  test_evidence.py  test_fsm_all_legal_paths.py  test_gvisor_sandbox.py  test_gvisor_sandbox_integration.py  test_hello_end_to_end.py  test_intake_ghsa_adapter.py  test_intake_ingest_e2e.py  test_intake_json_adapter.py  test_intake_protocol.py  test_journal_content_addressing.py  test_journal_crash_safe_append.py  test_journal_crypto.py  test_journal_encryption.py  test_journal_replay_idempotent.py  test_llm_provider_protocol.py  test_m2_pr_integration.py  test_mcp_apply_patch_integration.py  test_mcp_sampling_provider.py  test_mcp_server.py  test_open_draft_pr_effect.py  test_openai_compat_provider.py  test_orchestrator_effects.py  test_orchestrator_illegal_transition.py  test_patch_apply_agent.py  test_patch_apply_result_model.py  test_patch_plan_agent.py  test_patch_plan_integration.py  (+19 more)
tests/fixtures/: cve_2007_4559_poc.sh
tests/fixtures/intake/: sample_ghsa.json
tests/fixtures/patch_corpus/cwe22_path_traversal/: expected.diff  expected.py  plan.json  vulnerable.py
tests/fixtures/patch_corpus/cwe502_deserialization/: expected.diff  expected.py  plan.json  vulnerable.py
tests/fixtures/patch_corpus/cwe89_sqli/: expected.diff  expected.py  plan.json  vulnerable.py
