[project]
name = "patchwright"
version = "0.0.0"
description = "Open-source, model-agnostic agent runtime for vulnerability triage, patching, and disclosure."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Jeff Grayson" }]
keywords = ["security", "vulnerability", "cve", "patch", "agent", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/JeffGrayson1969/patchwright"
Repository = "https://github.com/JeffGrayson1969/patchwright"
Issues = "https://github.com/JeffGrayson1969/patchwright/issues"

[project.scripts]
patchwright = "patchwright.cli.__main__:main"

[project.entry-points."patchwright.plugins.agents"]
noop_triage = "patchwright.agents.noop_triage:agent"
noop_closer = "patchwright.agents.noop_closer:agent"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patchwright"]

[tool.hatch.build.targets.sdist]
include = [
    "src/patchwright",
    "LICENSE",
    "README.md",
    "PRD.md",
    "CLAUDE.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/patchwright"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src/patchwright"]

[[tool.mypy.overrides]]
module = ["patchwright.cli.*", "patchwright.agents.*"]
strict = false
